v0.0.11

* [BGBUILD-79] Allow to use BoxGrinder Build as a library
* [BGBUILD-126] Use encrypted password in kickstart files

v0.0.10

* [BGBUILD-100] Enable boxgrinder_build to create a Fedora image with encrypted partition(s)
* [BGBUILD-125] Create kickstart files in RPM-based OS plugin in a temporary directory

v0.0.9

* [BGBUILD-42] No man pages installed in appliances
* [BGBUILD-59] Remove all image modifications user is not expecting
* [BGBUILD-113] Allow to specify supported file formats for operating system plugin
* [BGBUILD-73] Add support for kickstart files

v0.0.8

* [BGBUILD-102] Start X on boot when X Window System group or base-x group is specified

v0.0.7

* [BGBUILD-87] Set default filesystem to ext4 for Fedora 13+

v0.0.6

* [BGBUILD-82] Root password not set when selinux packages are added

v0.0.5

* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-65] Allow to specify own repos overriding default repos provided for selected OS

v0.0.4

* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.3

* I'm not sure, really

v0.0.2

* First release
