@@ -4,7 +4,7 @@ timezone US/Eastern
 auth --useshadow --enablemd5
 selinux --permissive
 firewall --disabled
-bootloader --timeout=1 --append="acpi=force scsi_mod.scan=sync"
+bootloader --timeout=1
 firstboot --disabled
 
 <% if graphical %>
@@ -18,7 +18,7 @@ services --enabled=network
 rootpw --iscrypted <%= root_password.crypt((0...8).map { 65.+(rand(25)).chr }.join) %>
 
 <% partitions.each do |root, partition| %>
-part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%= partition['type'] %> <% unless partition['options'].nil? %> --fsoptions '<%= partition['options'] %>' <% end %> <% if partition['passphrase'] %> --encrypted --passphrase='<%= partition['passphrase'] %>' <% end %> --ondisk sda<% end %>
+part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%= partition['type'] %> <% unless partition['options'].nil? %> --fsoptions '<%= partition['options'] %>' <% end %> <% if partition['passphrase'] %> --encrypted --passphrase='<%= partition['passphrase'] %>' <% end %> --ondisk sda --label <%= root %><% end %>
 
 <% for repo in repos %>
 <%= repo %><% end %>
